corrected placeholders and link visibility, etc

--- a/MiU_1202_week3/Bad  /css/styles.css
+++ b/MiU_1202_week3/Bad  /css/styles.css
@@ -7,6 +7,7 @@
  display:block; margin:10px 0; color:#cc0000;
  }
  	
+#newerrorslink{display:none;}
 	
  	
  	
