--- a/MiU_1202_week3/Good/css/styles.css
+++ b/MiU_1202_week3/Good/css/styles.css
@@ -8,7 +8,7 @@
  display:block; margin:10px 0; color:#cc0000;
  }
  	
- /*#newerrorslink{display:none;}
+#newerrorslink{display:none;}
 
 /* html {
     background-color: #9999CC;
